# 1_HubbixPaie

./: .gitignore  NLP-Partie-1.ipynb  README.md
back/: pyproject.toml
back/app/: main.py
back/app/api/: api.py
back/app/api/endpoints/: article.py  document.py
back/app/config/: configurations.ini  db.py  generate_config.py  helper.py
back/app/core/: crud.py  legifrance.py  legifrance_api.py  nlp.py
back/app/core/data/temp/: last_articles.pkl  last_document.json
back/app/model/: article.py  document.py
back/app/schema/: article_schema.py  document_schema.py
front/: angular.json  package-lock.json  package.json
front/src/: index.html  styles.scss
front/src/app/: app-routing.module.ts  app.component.html  app.component.scss  app.component.ts  app.module.ts  configuration.ts  manager.service.ts
front/src/app/document/: document.component.html  document.component.scss  document.component.ts
front/src/app/home/: home.component.html  home.component.scss  home.component.ts  home.interceptor.ts
front/src/app/list-articles/: list-articles.component.html  list-articles.component.scss  list-articles.component.ts
front/src/app/models/: article.ts  document.ts
front/src/app/ng-material/mat-basic/: mat-basic.component.html  mat-basic.component.scss  mat-basic.component.spec.ts  mat-basic.component.ts
front/src/app/services/home/: home.service.ts
