[tool.poetry]
name = "Project 3WA - 1"
version = "0.1.0"
description = "IA API"
authors = ["Daniel Alexander Muro <60529405+dalexmuro@users.noreply.github.com>"]
repository = "https://github.com/dalexmuro/3WAProject-1"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10.7"
fastapi = "^0.83.0"
httptools = "^0.4.0"
uvicorn = "^0.18.3"
pydantic = "^1.10.2"
SQLAlchemy = "^1.4.41"
mysqlclient = "^2.1.1"
PyMySQL = "^1.0.2"
cryptography = "^38.0.1"
pdfplumber = "^0.7.4"
pandas = "^1.4.4"
requests = "^2.28.1"
requests-oauthlib = "^1.3.1"
aiofiles = "^22.1.0"
broadlink = {git = "https://github.com/felipediel/python-broadlink.git", rev = "patch-24"}
sqlalchemy-cockroachdb = "^1.4.4"
psycopg2-binary = "^2.9.3"
nltk = "^3.7"
scipy = "^1.9.1"
sklearn = "^0.0"
gensim = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
